k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: calibre
  name: calibre-service
  namespace: calibre
spec:
  ports:
  - name: 3000-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: calibre
  clusterIP: None
