k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: calibre-external-http-gateway
  namespace: calibre
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
    - name: http
      protocol: HTTP
      port: 80
  
---

# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: calibre-httproute
#   namespace: calibre
# spec:
#   parentRefs:
#   - name: calibre-external-http-gateway
#   hostnames:
#   - "calibre.gule-gulzar.com"
#   rules:
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /
#     backendRefs:
#     - name: calibre-service 
#       port: 3000
